 - Game Pak overrides dialog for setting savetype and sensor values
 - Support for games using the tilt sensor
 - Remappable shortcuts for keyboard and gamepad
 - Rewinding of emulation
 - Implemented BIOS routines SoftReset, RegisterRamReset, Diff8bitUnFilterWram, Diff8bitUnFilterVram, and Diff16bitUnFilter
 - Support IPv6
 - Save directory of last loaded file
 - Support BPS patches
Bugfixes:
 - Qt: Fix issue with set frame sizes being the wrong height
 - Qt: Fix emulator crashing when full screen if a game is not running
 - GBA Thread: Allow halted games to exit cleanly
 - GBA BIOS: Fix HLE Lz77 and RL functions to properly account for width and invalid addresses
 - ARM7: Fix LDM writeback to a register already written
 - GBA Memory: Don't call into GPIO write calls if GPIO devices are absent
 - ARM7: Extend prefetch by one stage
 - GBA BIOS: Fix BIOS prefetch after returning from a SWI
 - Debugger: Negative PC-relative loads now properly subtract the offset
 - Qt: Fix window focus issues
 - GBA Audio: Support 16-bit writes to FIFO audio
 - GBA Memory: Properly initialize 1 Mb flash, and add debug logging
 - Qt: Properly set default video recording settings
 - GBA Audio: Make larger buffer sizes than 2048 actually work properly
 - GBA Audio: Audio buffer sizes are now correct sizes for both sample rates
 - GBA Video: Fix blend issues with obscured middle layers
 - Video: Ensure FFmpeg encoder has audio frames
 - Video: Fix uncompressed PCM audio recording
 - GBA Video: Fix windows not disabling target 1 appropriately (fixes #161)
 - Debugger: Align PC-relative loads in Thumb
 - Debugger: Fix watchpoints triggering too late
 - GBA Video: Fix sprite mis-ordering behavior in some cases (fixes #168)
 - GBA Video: Fix window interactions with 16-color mode 0 mosaic
 - GBA Video: Fix sprite boundary conditions with mosaic
 - Video: Fix FFmpeg crashing when the file extension is wrong
 - GBA Audio: Fix GB audio channels being too quiet (fixes #159)