@@ -18,6 +18,7 @@ Features:
  - Support IPv6
  - Save directory of last loaded file
  - Support BPS patches
+ - Configurable game overrides
 Bugfixes:
  - Qt: Fix issue with set frame sizes being the wrong height
  - Qt: Fix emulator crashing when full screen if a game is not running
